--- a/report/section-task-definition.tex
+++ b/report/section-task-definition.tex
@@ -1,5 +1,5 @@
 \section{Task definition}
-\label{task-definition}
+\label{sec:task-definition}
 
 The first sub-task of SemEval-2020 Task 3 is to predict the direction and magnitude of
 the change in the human judgment of similarity of the same pair of target words in two
