--- a/report/table-best-window-size.tex
+++ b/report/table-best-window-size.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{table}
   \centering
   \captionsetup{justification=centering}
   \begin{subfigure}[b]{\textwidth}
@@ -42,9 +42,9 @@
     The best score for each language is underlined.
   }
   \label{table:best-window-size-static}
-\end{figure}
+\end{table}
 
-\begin{figure}
+\begin{table}
   \centering
   \captionsetup{justification=centering}
   \begin{subfigure}[b]{\textwidth}
@@ -88,9 +88,9 @@
     The best score for each language is underlined.
   }
   \label{table:best-window-size-contextual}
-\end{figure}
+\end{table}
 
-\begin{figure}
+\begin{table}
   \centering
   \captionsetup{justification=centering}
   \begin{subfigure}[b]{\textwidth}
@@ -134,4 +134,4 @@
     The best score for each language is underlined.
   }
   \label{table:best-window-size-pooled}
-\end{figure}
+\end{table}
