--- a/report/section-conclusion.tex
+++ b/report/section-conclusion.tex
@@ -4,20 +4,21 @@
 In this paper, I have presented the results of a hypothetical submission to
 SemEval-2020 Task 3, ``Graded Word Similarity in Context''.
 The purpose of this investigation was to compare the performance of static and
-contextual embeddings and their composition within a fixed-size context window on the
+contextual embeddings, and their composition within a fixed-size context window, on the
 task of predicting the change in the human judgment of similarity of a pair of words in
 two different contexts.
-I found that contextual embeddings generally outperformed static embeddings, but at a
-significant computational cost, and that composition benefited both static and
-contextual embeddings of sub-word tokens, with highly language-specific dependence on
-the window size.
+I found that contextual embeddings generally outperformed static embeddings but at a
+significant computational cost (\cref{sec:cost-benefit}).
+Composition benefited both static and contextual embeddings of sub-word tokens, with a
+language-dependent optimal window size (\cref{sec:language-specificity}).
 
-The results that I have given must be interpreted in context: the original submission
-authors did not have access to the evaluation dataset prior to submitting their
-results, only the `practice kit' of very few instances, and were therefore unable to
-optimize a parameter such as the window size prior to submission.
-Additionally, the models that I used were not necessarily available to the authors.
-With these caveats, I achieved several notable results (\cref{table:best-score}):
+These results must be interpreted in context: the original submission authors did not
+have access to the evaluation dataset prior to submitting their results, only the
+`practice kit' of very few instances, so had limited opportunity to optimize parameters
+such as the window size prior to submission (\cref{sec:hyperparameter-search}).
+The models that I used were also not necessarily available to the authors
+(\cref{sec:embedding-models}).
+With these caveats, I achieved several notable results (\cref{table:evaluation-best-score}):
 \begin{itemize}
   \item The pooled embeddings of \texttt{EMBEDDIA/crosloengual-bert} with a window
         size of three would have placed second among the Croatian submissions, with a
@@ -29,6 +30,6 @@ With these caveats, I achieved several notable results (\cref{table:best-score})
         with a window size of zero outperform several of the Finnish submissions,
         including the baseline, with a score of $0.564$.
 \end{itemize}
-Given the significant expense of applying contextual-embedding models, these results
-highlight the importance of analysing the complexity of the task at hand and
-considering the possibility that a simpler model produces adequate results.
+Given the significant expense of applying contextual language models, the last of these
+results highlights the importance of analysing the task at hand and considering the
+possibility that a simpler model produces adequate results.
