add correlation viz

--- a/report/figure-score-window.tex
+++ b/report/figure-score-window.tex
@@ -50,8 +50,8 @@
       \plotscorewindow{../results/evaluation/model=static_language=sl_window=0-50_operation=sum_similarity=cosine.csv}{\modelnamesl}
     \end{groupplot}
   \end{tikzpicture}
-  \caption{The score on the evaluation dataset against window size for static embedding
-    models and the composition operation of addition.}
+  \caption{The scores on the evaluation dataset against window size for \emph{static}
+    embedding models with the composition operation of addition.}
   \label{chart:score-window-static}
 \end{figure}
 
@@ -90,8 +90,8 @@
       \plotscorewindow{../results/evaluation/model=contextual_language=sl_window=0-10_operation=sum_similarity=cosine.csv}{\modelnamesl}
     \end{groupplot}
   \end{tikzpicture}
-  \caption{The score on the evaluation dataset against window size for contextual
-    embedding models and the composition operation of addition.}
+  \caption{The scores on the evaluation dataset against window size for
+    \emph{contextual} embedding models with the composition operation of addition.}
   \label{chart:score-window-contextual}
 \end{figure}
 
@@ -130,7 +130,7 @@
       \plotscorewindow{../results/evaluation/model=pooled_language=sl_window=0-10_operation=sum_similarity=cosine.csv}{\modelnamesl}
     \end{groupplot}
   \end{tikzpicture}
-  \caption{The score on the evaluation dataset against window size for pooled embedding
-    models and the composition operation of addition.}
+  \caption{The scores on the evaluation dataset against window size for \emph{pooled}
+    embedding models with the composition operation of addition.}
   \label{chart:score-window-pooled}
 \end{figure}
