--- a/report/table-practice-best-score.tex
+++ b/report/table-practice-best-score.tex
@@ -53,10 +53,10 @@
           scoreevaluation}]{../results/best/both_best_pooled.csv}
     \caption{Pooled}
   \end{subfigure}
-  \caption{The best scores on the `practice kit' dataset for each kind of embedding and
-    the corresponding scores on the evaluation dataset.
+  \caption{The best scores on the \emph{`practice kit'} dataset for each kind of
+    embedding, and the corresponding scores on the evaluation dataset.
     The results were limited to the composition operation of addition due to the
-    variability of the scores for the other operations
+    variability of the scores with multiplication and concatenation
     (\cref{chart:score-window-static-practice,chart:score-window-contextual-practice,chart:score-window-pooled-practice}).
   }
   \label{table:practice-best-score}
