--- a/report/table-evaluation-best-score.tex
+++ b/report/table-evaluation-best-score.tex
@@ -7,6 +7,15 @@
           @cell content={\texttt{##1}}}},
 }
 
+\pgfplotsset{
+  underline/.style={
+      postproc cell content/.append code={
+          \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+          \pgfkeysalso{best/.expand once={\besttemp}}
+        }
+    }
+}
+
 \begin{table}
   \centering
   \begin{subfigure}[b]{\textwidth}
@@ -25,7 +34,19 @@
           language,
           model_name,
           window,
-          score}]{../results/best/evaluation_best_contextual.csv}
+          score},
+      every row 0 column 3/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}}},
+      every row 1 column 3/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}}},
+      every row 3 column 3/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/best/evaluation_best_contextual.csv}
     \caption{Contextual}
   \end{subfigure}
   \par\bigskip
@@ -35,11 +56,18 @@
           language,
           model_name,
           window,
-          score}]{../results/best/evaluation_best_pooled.csv}
+          score},
+      every row 2 column 3/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/best/evaluation_best_pooled.csv}
     \caption{Pooled}
   \end{subfigure}
-  \caption{The best scores on the evaluation dataset for each kind of embedding.
-    In all cases, the best score was obtained with the composition operation of addition.
+  \caption{The best scores on the \emph{evaluation} dataset for each kind of embedding.
+    The best overall score for each language is underlined -- in all cases, the best score
+    was obtained with the composition operation of addition.
+    The predicted and actual human judgments of the change in similarity for these models
+    are shown in \cref{chart:predicted}.
   }
   \label{table:evaluation-best-score}
 \end{table}
